--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   springboot-app:
     build: .
     container_name: my-spring-app-cinema
-    restart: unless-stopped
+    restart: on-failure
     ports:
       - "8081:8080"
     environment:
@@ -26,7 +26,7 @@ services:
     ports:
       - "3309:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - mysql_data_cinema:/var/lib/mysql # Sửa ở đây
 
 volumes:
-  mysql_data:
+  mysql_data_cinema: # Và ở đây
