--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,32 +1,78 @@
+#services:
+#  springboot-app:
+#    build: .
+#    container_name: my-spring-app-cinema
+#    restart: unless-stopped
+#    ports:
+#      - "8081:8080"
+#    environment:
+#      # Truyền các biến môi trường vào cho ứng dụng Spring Boot
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3309/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true
+#      - SPRING_DATASOURCE_USERNAME=${MYSQL_USER}
+#      - SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD}
+#    depends_on:
+#      - mysql-db
+#
+#  mysql-db:
+#    image: mysql:8.4.0
+#    container_name: my-mysql-db-cinema
+#    restart: unless-stopped
+#    environment:
+#      # Sử dụng các biến từ file .env để cấu hình MySQL
+#      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+#      MYSQL_DATABASE: ${MYSQL_DATABASE}
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#    ports:
+#      - "3309:3306"
+#    volumes:
+#      - mysql_data:/var/lib/mysql
+#
+#volumes:
+#  mysql_data:
+
+version: '3.9'
+
 services:
   springboot-app:
     build: .
     container_name: my-spring-app-cinema
     restart: unless-stopped
     ports:
-      - "8081:8080"
+      - "8080:8080" # 8080 (trái dấu :) là cổng trên máy host, 8080 (phải dấu :) là trong container
     environment:
-      # Truyền các biến môi trường vào cho ứng dụng Spring Boot
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-db:3309/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true
-      - SPRING_DATASOURCE_USERNAME=${MYSQL_USER}
-      - SPRING_DATASOURCE_PASSWORD=${MYSQL_PASSWORD}
+      # Biến môi trường cho Spring Boot
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/${POSTGRES_DB}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: "true"
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
     depends_on:
-      - mysql-db
+      - postgres-db
+    networks:
+      - cinema-network
 
-  mysql-db:
-    image: mysql:8.4.0
-    container_name: my-mysql-db-cinema
+  postgres-db:
+    image: postgres:17
+    container_name: my-postgres-db-cinema
     restart: unless-stopped
     environment:
-      # Sử dụng các biến từ file .env để cấu hình MySQL
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      TZ: "Asia/Ho_Chi_Minh"
     ports:
-      - "3309:3306"
+      - "5433:5432"  # 5433 là cổng trên máy host, 5432 là trong container
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data #- postgres_data:/var/lib/postgresql/data: Database (các bảng, dữ liệu, schema, v.v.) được lưu trong vùng riêng của Docker, không nằm trong máy bạn.
+      #Khi bạn thao tác trong container (tạo, sửa, xóa bảng...), Docker volume sẽ được cập nhật ngay lập tức — đó là nơi chứa data thật.
+      #- ./pgdata:/var/lib/postgresql/data: nếu bạn xóa thư mục pgdata trên máy, thì PostgreSQL mất sạch dữ liệu
+    networks:
+      - cinema-network
 
 volumes:
-  mysql_data:
+  postgres_data:
+
+networks:
+  cinema-network:
