--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,11 +5,18 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3309/bkfilm"
+    url: "jdbc:postgresql://localhost:5433/hdqcinema" #?options=-c%20TimeZone=Asia/Ho_Chi_Minh
     password: 12345678
     username: my_app_user
+
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+
+#    properties:
+#      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+#      default_schema: public
+#      jdbc.time_zone: "Asia/Ho_Chi_Minh"
